Update to fix few css(scrollbar, icon...) & fix TO-DO and DONE's function & fix README.md.

--- a/tomatoTimer/src/assets/scss/page/index/_index.scss
+++ b/tomatoTimer/src/assets/scss/page/index/_index.scss
@@ -48,55 +48,58 @@
         position: relative;
         padding-top: 9.0625rem;
         display: flex;
-    }
-    &__leftPartTitleBox-leftPart {
-        flex: 0 0 10%;
-        &-circleIcon {
-            width: 3rem;
-            height: 3rem;
-            border: 0.125rem solid black;
-            border-radius: 50%;
-            transition: all .3s ease;
-            transform: scale(1);
-            cursor: pointer;
-            &:hover {
-                transform: scale(1.3);
-                background-color: #000;
-            }
-            &:active {
-                box-shadow: 1px 1px 3px 2px rgba(20%, 20%, 40%, 0.5) inset;
-                background-color: #000;
+        &-leftPart {
+            flex: 0 0 10%;
+            &-circleIcon {
+                width: 3rem;
+                height: 3rem;
+                border: 0.125rem solid black;
+                border-radius: 50%;
+                transition: all .3s ease;
                 transform: scale(1);
+                cursor: pointer;
+                &:hover {
+                    transform: scale(1.3);
+                    background-color: #000;
+                }
+                &:active {
+                    box-shadow: 1px 1px 3px 2px rgba(20%, 20%, 40%, 0.5) inset;
+                    background-color: #000;
+                    transform: scale(1);
+                }
+                &--done {
+                    transition: all .3s ease;
+                    background-color: #000;
+                }
             }
-            &--done {
+        }
+        &-rightPart {
+            flex: 0 0 90%;
+            padding-left: 1rem;
+            text-align: left;
+            &-title {
                 transition: all .3s ease;
-                background-color: #000;
+                font-size: 1.5rem;
+                font-weight: bold;
+                &--done {
+                    transition: all .3s ease;
+                    text-decoration: line-through;
+                    color: #ccc;
+                }
+            }
+            &-tomatoBox {
+                padding-top: 0.375rem;
+            }
+            &-tomatoImg {
+                width: 1.25rem;
+                padding-right: 0.5rem;
+                &:last-child {
+                    padding-right: 0;
+                }
             }
         }
-    }
-    &__leftPartTitleBox-rightPart {
-        flex: 0 0 90%;
-        padding-left: 1rem;
-        text-align: left;
-        &-title {
-            transition: all .3s ease;
-            font-size: 1.5rem;
-            font-weight: bold;
-            &--done {
-                transition: all .3s ease;
-                text-decoration: line-through;
-                color: #ccc;
-            }
-        }
-        &-tomatoBox {
-            padding-top: 0.375rem;
-        }
-        &-tomatoImg {
-            width: 20px;
-            padding-right: 0.5rem;
-            &:last-child {
-                padding-right: 0;
-            }
+        &-remindText {
+            font-size: 2.5rem;
         }
     }
     &__leftPartTimeBox {
@@ -338,6 +341,7 @@
         font-weight: bold;
         color: #fff;
         &-todoListsItem {
+            position: relative;
             border: 0!important;
             background-color: #ffffff33!important;
             font-size: 1.5rem!important;
@@ -353,9 +357,21 @@
             top: 1rem;
         }
         &-todoLists {
-            padding-top: 1rem;
+            margin-top: 0.2rem;
             max-height: 250px;
             overflow-y: scroll;
+            padding: 10px;
+            &::-webkit-scrollbar {
+                width: 5px;
+            }
+            &::-webkit-scrollbar-track {
+                background-color: #ccc;
+                border-radius: 20px;
+            }
+            &::-webkit-scrollbar-thumb {
+                background-color: $Secondry;
+                border-radius: 20px;
+            }
         }
     }
     &__leftContentPartTodoList {
@@ -374,7 +390,7 @@
     }
     &__leftContentPartPlayIcon {
         position: absolute;
-        right: 0;
+        right: 10px;
         width: 1.5rem!important;
         height: 1.5rem!important;
         cursor: pointer;
@@ -458,7 +474,7 @@
 
 .slide-enter-active,
 .slide-leave-active {
-    transition: all .8s;
+    transition: all .5s;
 }
 
 .slide-enter {
@@ -485,7 +501,7 @@
 
 .fade-enter-active,
 .fade-leave-active {
-    transition: opacity .5s;
+    transition: opacity .8s;
 }
 
 .fade-enter,
@@ -596,27 +612,27 @@
 
 /* Animation for doneTodoDropTurn up */
 
-.doneTodoDropTurn-enter-active,
-.doneTodoDropTurn-leave-active {
+.doneTodoDropTurnUp-enter-active,
+.doneTodoDropTurnUp-leave-active {
     transition: all .3s;
 }
 
-.doneTodoDropTurn-enter {
+.doneTodoDropTurnUp-enter {
     opacity: 0;
     transform: rotate(0deg);
 }
 
-.doneTodoDropTurn-enter-to {
+.doneTodoDropTurnUp-enter-to {
     opacity: 1;
     transform: rotate(-180deg);
 }
 
-.doneTodoDropTurn-leave {
+.doneTodoDropTurnUp-leave {
     opacity: 0;
     transform: rotate(-180deg);
 }
 
-.doneTodoDropTurn-leave-to {
+.doneTodoDropTurnUp-leave-to {
     transform: rotate(0deg);
 }
 
